colcon_ws/log/build_2022-09-10_22-46-58/gatekeeper/stderr.log
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:57:48: error: expected primary-expression before ‘max’
   57 |     double numMax = std::numeric_limits<double>max();
      |                                                ^~~
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:58:49: error: expected primary-expression before ‘max’
   58 |     double numMin = -std::numeric_limits<double>max();
      |                                                 ^~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:91:8: error: ‘PassThrough’ is not a member of ‘pcl’
   91 |   pcl::PassThrough<PCLPoint> pass_x;
      |        ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:91:28: error: expected primary-expression before ‘>’ token
   91 |   pcl::PassThrough<PCLPoint> pass_x;
      |                            ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:91:30: error: ‘pass_x’ was not declared in this scope
   91 |   pcl::PassThrough<PCLPoint> pass_x;
      |                              ^~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:94:8: error: ‘PassThrough’ is not a member of ‘pcl’
   94 |   pcl::PassThrough<PCLPoint> pass_y;
      |        ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:94:28: error: expected primary-expression before ‘>’ token
   94 |   pcl::PassThrough<PCLPoint> pass_y;
      |                            ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:94:30: error: ‘pass_y’ was not declared in this scope
   94 |   pcl::PassThrough<PCLPoint> pass_y;
      |                              ^~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:97:8: error: ‘PassThrough’ is not a member of ‘pcl’
   97 |   pcl::PassThrough<PCLPoint> pass_z;
      |        ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:97:28: error: expected primary-expression before ‘>’ token
   97 |   pcl::PassThrough<PCLPoint> pass_z;
      |                            ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:97:30: error: ‘pass_z’ was not declared in this scope
   97 |   pcl::PassThrough<PCLPoint> pass_z;
      |                              ^~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
